--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link href="http://fonts.cdnfonts.com/css/vcr-osd-mono" rel="stylesheet">
     <!-- CSS (inclus Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    
+    <meta name="p:domain_verify" content="493a73e2ec8d19c1a7f300202fd81113"/>
 </head>
 
 <body id="page-top">
